move data to zk